feat: attach taxonomy in job creation (#155)
fixes #95
