# taxonomy/app/taxonomy/resources.py
@@ -1,16 +1,19 @@
-from typing import List
+from typing import List, Union
 
 from fastapi import APIRouter, Depends, HTTPException, Path, Response, status
+from filter_lib import Page
 from sqlalchemy.orm import Session
+from sqlalchemy_filters.exceptions import BadFilterFormat
 
 from app.database import get_db
+from app.filters import TaxonomyFilter
 from app.logging_setup import LOGGER
 from app.microservice_communication.search import X_CURRENT_TENANT_HEADER
 from app.schemas import (
     BadRequestErrorSchema,
     CategoryLinkSchema,
     ConnectionErrorSchema,
-    JobIdSchema,
+    JobTaxonomySchema,
     NotFoundErrorSchema,
     TaxonomyBaseSchema,
     TaxonomyInputSchema,
@@ -22,10 +25,11 @@ from app.taxonomy.services import (
     batch_versioned_taxonomies,
     bulk_create_relations_with_categories,
     bulk_delete_category_association,
-    create_new_relation_to_job,
     create_taxonomy_instance,
     delete_taxonomy_instance,
+    filter_taxonomies,
     get_latest_taxonomy,
+    get_linked_taxonomies,
     get_second_latest_taxonomy,
     get_taxonomies_by_job_id,
     get_taxonomy,
@@ -146,38 +150,13 @@ def get_taxonomy_by_id_and_version(
 
 
 @router.post(
-    "/{taxonomy_id}/link_to_job",
-    status_code=status.HTTP_201_CREATED,
-    responses={
-        400: {"model": BadRequestErrorSchema},
-    },
-    summary="Save new taxonomy and return saved one.",
-)
-def associate_taxonomy_to_job(
-    query: JobIdSchema,
-    taxonomy_id: str = Path(..., example="1"),
-    session: Session = Depends(get_db),
-    x_current_tenant: str = X_CURRENT_TENANT_HEADER,
-):
-    taxonomy = get_latest_taxonomy(session, taxonomy_id, x_current_tenant)
-    if not taxonomy:
-        LOGGER.error(
-            "associate_taxonomy_to_job get not existing id %s", taxonomy_id
-        )
-        raise HTTPException(status_code=404, detail="Not existing taxonomy")
-
-    # todo validate job existence.
-    create_new_relation_to_job(session, taxonomy, query.id)
-
-
-@router.post(
     "/link_category",
     status_code=status.HTTP_201_CREATED,
     response_model=List[CategoryLinkSchema],
     responses={
         400: {"model": BadRequestErrorSchema},
     },
-    summary="Creates association between taxonomy and category.",
+    summary="Creates association between taxonomy and category for exact job.",
 )
 def associate_taxonomy_to_category(
     category_links: List[CategoryLinkSchema],
@@ -220,26 +199,46 @@ def associate_taxonomy_to_category(
 
 
 @router.delete(
-    "/link_category/{category_id}",
+    "/link_category/{job_id}",
     status_code=status.HTTP_204_NO_CONTENT,
     responses={
         404: {"model": NotFoundErrorSchema},
     },
-    summary="Deletes association between taxonomy and category.",
+    summary="Deletes association between taxonomies for exact job.",
 )
-def delete_category_link(
-    category_id: str = Path(..., example="1"),
+def delete_category_link_by_job_id(
+    job_id: str = Path(..., example="123"),
     session: Session = Depends(get_db),
     x_current_tenant: str = X_CURRENT_TENANT_HEADER,
 ) -> Response:
-    bulk_delete_category_association(session, category_id, x_current_tenant)
+    bulk_delete_category_association(session, x_current_tenant, job_id)
+    return Response(status_code=status.HTTP_204_NO_CONTENT)
+
+
+@router.delete(
+    "/link_category/{job_id}/{category_id}",
+    status_code=status.HTTP_204_NO_CONTENT,
+    responses={
+        404: {"model": NotFoundErrorSchema},
+    },
+    summary="Deletes association between taxonomy and category for exact job.",
+)
+def delete_category_link(
+    job_id: str = Path(..., example="123"),
+    category_id: str = Path(..., example="321"),
+    session: Session = Depends(get_db),
+    x_current_tenant: str = X_CURRENT_TENANT_HEADER,
+) -> Response:
+    bulk_delete_category_association(
+        session, x_current_tenant, job_id, category_id
+    )
     return Response(status_code=status.HTTP_204_NO_CONTENT)
 
 
 @router.get(
     "",
     status_code=status.HTTP_200_OK,
-    response_model=List[TaxonomyResponseSchema],
+    response_model=List[JobTaxonomySchema],
     summary="Get all taxonomies by job id",
 )
 def get_job_taxonomies(
@@ -247,10 +246,7 @@ def get_job_taxonomies(
     session: Session = Depends(get_db),
     x_current_tenant: str = X_CURRENT_TENANT_HEADER,
 ):
-    taxonomies = get_taxonomies_by_job_id(session, job_id, x_current_tenant)
-    return [
-        TaxonomyResponseSchema.from_orm(taxonomy) for taxonomy in taxonomies
-    ]
+    return get_taxonomies_by_job_id(session, job_id, x_current_tenant)
 
 
 @router.put(
@@ -371,3 +367,62 @@ def delete_taxonomy_by_id_and_version(
             second_latest_model.latest = True
     delete_taxonomy_instance(session, taxonomy, x_current_tenant)
     return Response(status_code=status.HTTP_204_NO_CONTENT)
+
+
+@router.post(
+    "/all",
+    status_code=status.HTTP_200_OK,
+    response_model=Page[Union[TaxonomyResponseSchema, str, dict]],
+    responses={
+        400: {"model": BadRequestErrorSchema},
+    },
+    summary="Search all taxonomies.",
+)
+def search_categories(
+    request: TaxonomyFilter,
+    session: Session = Depends(get_db),
+    x_current_tenant: str = X_CURRENT_TENANT_HEADER,
+) -> Page[Union[TaxonomyResponseSchema, str, dict]]:
+    """
+    Searches and returns taxonomies according to search request parameters
+    filters. Supports pagination and ordering.
+    """
+    try:
+        response = filter_taxonomies(session, request, x_current_tenant)
+    except BadFilterFormat as error:
+        raise HTTPException(
+            status_code=400,
+            detail=f"{error}",
+        )
+    return response
+
+
+@router.get(
+    "/link_category/{job_id}/{category_id}",
+    response_model=List[TaxonomyResponseSchema],
+    status_code=200,
+    responses={
+        404: {
+            "model": NotFoundErrorSchema,
+            "description": "Taxonomy was not found",
+        },
+    },
+    summary="Get taxonomy by job id and category id.",
+)
+def get_taxonomy_by_job_and_category_id(
+    job_id: str = Path(..., example="123"),
+    category_id: str = Path(..., example="321"),
+    session: Session = Depends(get_db),
+    x_current_tenant: str = X_CURRENT_TENANT_HEADER,
+) -> List[TaxonomyResponseSchema]:
+    taxonomy = get_linked_taxonomies(
+        session, job_id, category_id, x_current_tenant
+    )
+    if not taxonomy:
+        LOGGER.error(
+            "get_taxonomy_by_job_and_category_id get not existing combination"
+            "of id %s and version %s",
+            (job_id, category_id),
+        )
+        raise HTTPException(status_code=404, detail="Not existing taxonomy")
+    return taxonomy
