# taxonomy/documentation/openapi.yaml
@@ -248,6 +248,13 @@ paths:
           type: string
         name: job_id
         in: query
+      - required: true
+        schema:
+          title: X-Current-Tenant
+          type: string
+        example: test
+        name: X-Current-Tenant
+        in: header
       responses:
         '200':
           description: Successful Response
@@ -257,7 +264,7 @@ paths:
                 title: Response Get Job Taxonomies Taxonomy Get
                 type: array
                 items:
-                  $ref: '#/components/schemas/TaxonomyResponseSchema'
+                  $ref: '#/components/schemas/JobTaxonomySchema'
         '500':
           description: Internal Server Error
           content:
@@ -276,6 +283,14 @@ paths:
       summary: Update taxonomy.
       description: Updates taxonomy by id and returns updated taxonomy.
       operationId: update_taxonomy_taxonomy_put
+      parameters:
+      - required: true
+        schema:
+          title: X-Current-Tenant
+          type: string
+        example: test
+        name: X-Current-Tenant
+        in: header
       requestBody:
         content:
           application/json:
@@ -365,6 +380,13 @@ paths:
         example: '1'
         name: taxonomy_id
         in: path
+      - required: true
+        schema:
+          title: X-Current-Tenant
+          type: string
+        example: test
+        name: X-Current-Tenant
+        in: header
       responses:
         '200':
           description: Successful Response
@@ -403,6 +425,13 @@ paths:
         example: '1'
         name: taxonomy_id
         in: path
+      - required: true
+        schema:
+          title: X-Current-Tenant
+          type: string
+        example: test
+        name: X-Current-Tenant
+        in: header
       responses:
         '204':
           description: Successful Response
@@ -445,6 +474,13 @@ paths:
         example: 1
         name: version
         in: path
+      - required: true
+        schema:
+          title: X-Current-Tenant
+          type: string
+        example: test
+        name: X-Current-Tenant
+        in: header
       responses:
         '200':
           description: Successful Response
@@ -490,6 +526,13 @@ paths:
         example: 1
         name: version
         in: path
+      - required: true
+        schema:
+          title: X-Current-Tenant
+          type: string
+        example: test
+        name: X-Current-Tenant
+        in: header
       requestBody:
         content:
           application/json:
@@ -547,6 +590,13 @@ paths:
         example: 1
         name: version
         in: path
+      - required: true
+        schema:
+          title: X-Current-Tenant
+          type: string
+        example: test
+        name: X-Current-Tenant
+        in: header
       responses:
         '204':
           description: Successful Response
@@ -568,32 +618,39 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/HTTPValidationError'
-  /taxonomy/{taxonomy_id}/link_to_job:
+  /taxonomy/link_category:
     post:
       tags:
       - Taxonomy
-      summary: Save new taxonomy and return saved one.
-      operationId: associate_taxonomy_to_job_taxonomy__taxonomy_id__link_to_job_post
+      summary: Creates association between taxonomy and category for exact job.
+      operationId: associate_taxonomy_to_category_taxonomy_link_category_post
       parameters:
       - required: true
         schema:
-          title: Taxonomy Id
+          title: X-Current-Tenant
           type: string
-        example: '1'
-        name: taxonomy_id
-        in: path
+        example: test
+        name: X-Current-Tenant
+        in: header
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/JobIdSchema'
+              title: Category Links
+              type: array
+              items:
+                $ref: '#/components/schemas/CategoryLinkSchema'
         required: true
       responses:
         '201':
           description: Successful Response
           content:
             application/json:
-              schema: {}
+              schema:
+                title: Category Links Response
+                type: array
+                items:
+                  $ref: '#/components/schemas/CategoryLinkSchema'
         '500':
           description: Internal Server Error
           content:
@@ -612,6 +669,203 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/HTTPValidationError'
+  /taxonomy/link_category/{job_id}:
+    delete:
+      tags:
+      - Taxonomy
+      summary: Deletes association between taxonomies for exact job.
+      operationId: delete_category_link_by_job_id_taxonomy_link_category__job_id__delete
+      parameters:
+      - required: true
+        schema:
+          title: Job Id
+          type: string
+        example: '123'
+        name: job_id
+        in: path
+      - required: true
+        schema:
+          title: X-Current-Tenant
+          type: string
+        example: test
+        name: X-Current-Tenant
+        in: header
+      responses:
+        '204':
+          description: Successful Response
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ConnectionErrorSchema'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFoundErrorSchema'
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+  /taxonomy/link_category/{job_id}/{category_id}:
+    get:
+      tags:
+      - Taxonomy
+      summary: Get taxonomy by job id and category id.
+      operationId: get_taxonomy_by_job_and_category_id_taxonomy_link_category__job_id___category_id__get
+      parameters:
+      - required: true
+        schema:
+          title: Job Id
+          type: string
+        example: '123'
+        name: job_id
+        in: path
+      - required: true
+        schema:
+          title: Category Id
+          type: string
+        example: '321'
+        name: category_id
+        in: path
+      - required: true
+        schema:
+          title: X-Current-Tenant
+          type: string
+        example: test
+        name: X-Current-Tenant
+        in: header
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                title: Response Get Taxonomy By Job And Category Id Taxonomy Link
+                  Category  Job Id   Category Id  Get
+                type: array
+                items:
+                  $ref: '#/components/schemas/TaxonomyResponseSchema'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ConnectionErrorSchema'
+        '404':
+          description: Taxonomy was not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFoundErrorSchema'
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+    delete:
+      tags:
+      - Taxonomy
+      summary: Deletes association between taxonomy and category for exact job.
+      operationId: delete_category_link_taxonomy_link_category__job_id___category_id__delete
+      parameters:
+      - required: true
+        schema:
+          title: Job Id
+          type: string
+        example: '123'
+        name: job_id
+        in: path
+      - required: true
+        schema:
+          title: Category Id
+          type: string
+        example: '321'
+        name: category_id
+        in: path
+      - required: true
+        schema:
+          title: X-Current-Tenant
+          type: string
+        example: test
+        name: X-Current-Tenant
+        in: header
+      responses:
+        '204':
+          description: Successful Response
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ConnectionErrorSchema'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFoundErrorSchema'
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+  /taxonomy/all:
+    post:
+      tags:
+      - Taxonomy
+      summary: Search all taxonomies.
+      description: |-
+        Searches and returns taxonomies according to search request parameters
+        filters. Supports pagination and ordering.
+      operationId: search_categories_taxonomy_all_post
+      parameters:
+      - required: true
+        schema:
+          title: X-Current-Tenant
+          type: string
+        example: test
+        name: X-Current-Tenant
+        in: header
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/_BadgerdocSearch_taxonomy_Taxonomy_'
+        required: true
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Page_Union_app.schemas.taxonomy.TaxonomyResponseSchema__str__dict__'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ConnectionErrorSchema'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequestErrorSchema'
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+      security:
+      - TenantDependencyDocs: []
 components:
   schemas:
     BadRequestErrorSchema:
@@ -625,6 +879,33 @@ components:
           type: string
       example:
         detail: Bad request.
+    CategoryLinkSchema:
+      title: CategoryLinkSchema
+      required:
+      - category_id
+      - job_id
+      - taxonomy_id
+      type: object
+      properties:
+        category_id:
+          title: Category Id
+          type: string
+          description: Category id to link taxonomy to
+          example: 123abc
+        job_id:
+          title: Job Id
+          type: string
+          description: Job id to link taxonomy to
+          example: 123abc
+        taxonomy_id:
+          title: Taxonomy Id
+          type: string
+          example: my_taxonomy_id
+        taxonomy_version:
+          title: Taxonomy Version
+          type: integer
+          description: Version of taxonomy
+          example: 1
     ConnectionErrorSchema:
       title: ConnectionErrorSchema
       required:
@@ -645,15 +926,34 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/ValidationError'
-    JobIdSchema:
-      title: JobIdSchema
+    JobTaxonomySchema:
+      title: JobTaxonomySchema
       required:
+      - name
       - id
+      - version
+      - category_id
       type: object
       properties:
+        name:
+          title: Name
+          type: string
+          description: Taxonomy name
+          example: taxonomy_name
         id:
           title: Id
           type: string
+          description: Taxonomy id
+          example: my_taxonomy_id
+        version:
+          title: Version
+          type: integer
+          description: Version of taxonomy
+          example: 1
+        category_id:
+          title: Category Id
+          type: string
+          description: Category id to link taxonomy to
           example: 123abc
     NotFoundErrorSchema:
       title: NotFoundErrorSchema
@@ -681,6 +981,42 @@ components:
           items:
             anyOf:
             - $ref: '#/components/schemas/TaxonResponseSchema'
+            - type: string
+            - type: object
+      description: |-
+        Abstract base class for generic types.
+
+        A generic type is typically declared by inheriting from
+        this class parameterized with one or more type variables.
+        For example, a generic mapping type might be defined as::
+
+          class Mapping(Generic[KT, VT]):
+              def __getitem__(self, key: KT) -> VT:
+                  ...
+              # Etc.
+
+        This class can then be used as follows::
+
+          def lookup_name(mapping: Mapping[KT, VT], key: KT, default: VT) -> VT:
+              try:
+                  return mapping[key]
+              except KeyError:
+                  return default
+    Page_Union_app.schemas.taxonomy.TaxonomyResponseSchema__str__dict__:
+      title: Page[Union[app.schemas.taxonomy.TaxonomyResponseSchema, str, dict]]
+      required:
+      - pagination
+      - data
+      type: object
+      properties:
+        pagination:
+          $ref: '#/components/schemas/PaginationOut'
+        data:
+          title: Data
+          type: array
+          items:
+            anyOf:
+            - $ref: '#/components/schemas/TaxonomyResponseSchema'
             - type: string
             - type: object
       description: |-
@@ -838,10 +1174,6 @@ components:
           title: Name
           type: string
           example: taxonomy_name
-        category_id:
-          title: Category Id
-          type: string
-          example: my_category
     TaxonomyInputSchema:
       title: TaxonomyInputSchema
       required:
@@ -852,10 +1184,6 @@ components:
           title: Name
           type: string
           example: taxonomy_name
-        category_id:
-          title: Category Id
-          type: string
-          example: my_category
         id:
           title: Id
           type: string
@@ -872,10 +1200,6 @@ components:
           title: Name
           type: string
           example: taxonomy_name
-        category_id:
-          title: Category Id
-          type: string
-          example: my_category
         id:
           title: Id
           type: string
@@ -898,7 +1222,9 @@ components:
           title: Location
           type: array
           items:
-            type: string
+            anyOf:
+            - type: string
+            - type: integer
         msg:
           title: Message
           type: string
@@ -921,6 +1247,41 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/_Sorts_taxon_Taxon_'
+      description: |-
+        Abstract base class for generic types.
+
+        A generic type is typically declared by inheriting from
+        this class parameterized with one or more type variables.
+        For example, a generic mapping type might be defined as::
+
+          class Mapping(Generic[KT, VT]):
+              def __getitem__(self, key: KT) -> VT:
+                  ...
+              # Etc.
+
+        This class can then be used as follows::
+
+          def lookup_name(mapping: Mapping[KT, VT], key: KT, default: VT) -> VT:
+              try:
+                  return mapping[key]
+              except KeyError:
+                  return default
+    _BadgerdocSearch_taxonomy_Taxonomy_:
+      title: _BadgerdocSearch[taxonomy_Taxonomy]
+      type: object
+      properties:
+        pagination:
+          $ref: '#/components/schemas/Pagination'
+        filters:
+          title: Filters
+          type: array
+          items:
+            $ref: '#/components/schemas/_Filters_taxonomy_Taxonomy_'
+        sorting:
+          title: Sorting
+          type: array
+          items:
+            $ref: '#/components/schemas/_Sorts_taxonomy_Taxonomy_'
       description: |-
         Abstract base class for generic types.
 
@@ -989,6 +1350,19 @@ components:
           $ref: '#/components/schemas/_FilterOperations'
         value:
           title: Value
+    _Filters_taxonomy_Taxonomy_:
+      title: _Filters[taxonomy_Taxonomy]
+      required:
+      - field
+      - operator
+      type: object
+      properties:
+        field:
+          $ref: '#/components/schemas/taxonomy_Taxonomy'
+        operator:
+          $ref: '#/components/schemas/_FilterOperations'
+        value:
+          title: Value
     _SortDirection:
       title: _SortDirection
       enum:
@@ -1007,6 +1381,17 @@ components:
           $ref: '#/components/schemas/taxon_Taxon'
         direction:
           $ref: '#/components/schemas/_SortDirection'
+    _Sorts_taxonomy_Taxonomy_:
+      title: _Sorts[taxonomy_Taxonomy]
+      required:
+      - field
+      - direction
+      type: object
+      properties:
+        field:
+          $ref: '#/components/schemas/taxonomy_Taxonomy'
+        direction:
+          $ref: '#/components/schemas/_SortDirection'
     taxon_Taxon:
       title: taxon_Taxon
       enum:
@@ -1020,7 +1405,6 @@ components:
       - taxonomy.name
       - taxonomy.version
       - taxonomy.tenant
-      - taxonomy.category_id
       - taxonomy.latest
       - parent.id
       - parent.name
@@ -1031,6 +1415,30 @@ components:
       - parent.tree
       type: string
       description: An enumeration.
+    taxonomy_Taxonomy:
+      title: taxonomy_Taxonomy
+      enum:
+      - id
+      - name
+      - version
+      - latest
+      - categories.taxonomy_id
+      - categories.taxonomy_version
+      - categories.category_id
+      - categories.job_id
+      - taxons.id
+      - taxons.name
+      - taxons.tenant
+      - taxons.taxonomy_id
+      - taxons.taxonomy_version
+      - taxons.parent_id
+      - taxons.tree
+      type: string
+      description: An enumeration.
+  securitySchemes:
+    TenantDependencyDocs:
+      type: http
+      scheme: bearer
 tags:
 - name: Taxonomy
   description: Actions associated with taxonomies.
